// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gate component should contain all components 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-1 col-xs-1"
    >
      <div
        className="row"
      >
        <button
          className="btn btn-success"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Open
        </button>
      </div>
      <div
        className="row"
      >
        <div>
          some time ago
        </div>
      </div>
      <div
        className="row"
      >
        <h4>
          <span
            className="label label-success"
          >
            Open
          </span>
        </h4>
      </div>
    </div>
    <div
      className="col-md-2 col-xs-2"
      style={
        Object {
          "marginLeft": "-45px",
        }
      }
    >
      <div
        className="form-group"
      >
        <textarea
          className="form-control"
          id="formControlsTextarea"
          onChange={[Function]}
          onClick="openCommentEditDialog"
          type={undefined}
          value="comment 1"
        />
      </div>
      <button
        className="btn btn-xs btn-info"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        edit comment
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className=""
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className=""
          >
            ticket 1
            <a
              onClick={[Function]}
            >
              <span
                className="glyphicon glyphicon-trash"
              />
            </a>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className=""
          >
            ticket 2
            <a
              onClick={[Function]}
            >
              <span
                className="glyphicon glyphicon-trash"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`load from state should load the state correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-1 col-xs-1"
    >
      <div
        className="row"
      >
        <button
          className="btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Closed
        </button>
      </div>
      <div
        className="row"
      >
        <div>
          now
        </div>
      </div>
      <div
        className="row"
      >
        <h4>
          <span
            className="label label-success"
          >
            Open
          </span>
        </h4>
      </div>
    </div>
    <div
      className="col-md-2 col-xs-2"
      style={
        Object {
          "marginLeft": "-45px",
        }
      }
    >
      <div
        className="form-group"
      >
        <textarea
          className="form-control"
          id="formControlsTextarea"
          onChange={[Function]}
          onClick={[Function]}
          type={undefined}
          value="some comment"
        />
      </div>
      <button
        className="btn btn-xs btn-info"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        edit comment
      </button>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className=""
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className=""
          >
            ticket 1
            <a
              onClick={[Function]}
            >
              <span
                className="glyphicon glyphicon-trash"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
